turtleart.square.Square.scala.error
Erreur de compilation :
Square:3: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();avance(200)
        ^Square:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();avance(200)
        ^Square:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();avance(200)
        ^