turtleart.square.Square.scala.code
override def run() {
  baisseBrosse();avance(200)
  droite();avance(200)
  droite();avance(200)
  droite();avance(200)
}